kubernetes/my-app-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: my-app
spec: {}
status: {}
