kubernetes/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
    app.kubernetes.io/instance: argocd-config
  name: webapp-svc
  namespace: my-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: webapp
  type: LoadBalancer
status:
  loadBalancer: {}
