kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
  name: app-ingress
  namespace: my-app
spec:
  ingressClassName: alb
  rules:
  - host: '*'
    http:
      paths:
      - backend:
          service:
            name: webapp-svc
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer: {}
